--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         position: fixed;
         top: 20px;
         right: 20px;
-        color: #36d67e;
+        color: #565656;
         font-size: 32px;
         font-weight: bold;
         font-family: Arial, sans-serif;
