--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </a-entity>
   <a-entity gltf-model="url(public/free_empty_room.glb)" position="0 0 -4"></a-entity>
       <a-entity position="0 0 -2.5" rotation="0 180 0" scale="0.01 0.01 0.01">
-        <a-entity gltf-model="url(public/elsie_stackable_dining_chair_white.glb)"></a-entity>
+        <a-entity gltf-model="url(public/elsie_stackable_dining_chair_white.glb)" scale="2 2 2"></a-entity>
       </a-entity>
       <a-entity gltf-model="url(public/long_table_and_chairs_low_poly.glb)" position="0 0 -4" rotation="0 180 0" scale="2 2 2"></a-entity>
       <a-plane position="-1 2.4 -4" rotation="0 0 0" width="1.2" height="2" color="#cccccc"></a-plane>
