--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>A-Frame Test</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    
     <style>
       html, body { margin: 0; height: 100%; }
       #hud {
@@ -24,31 +25,48 @@
     <div id="hud">$1000</div>
     <a-scene>
       <a-camera position="0 2.2 -2.5" look-controls="enabled: true"></a-camera>
-      <a-entity gltf-model="url(/ceiling_fluorescent_light.glb)" 
-      position="0 10 -2.5" 
-      scale="0.05 0.05 0.05" 
-      rotation="0 90 0">
-</a-entity>
-  <a-entity gltf-model="url(/free_empty_room.glb)" position="0 0 -4"></a-entity>
+      <a-entity gltf-model="url(/potted_plant_mediterranean_med_leaf_low_poly.glb)" position="-4 0 -8.5"  scale="2 2 2"></a-entity>
+      <a-entity gltf-model="url(/potted_plant_wk_8.glb)" position="4 0.7 -8.3" scale="0.02 0.02 0.02"></a-entity>
+      <a-entity gltf-model="url(/ceiling_fluorescent_light.glb)"
+                material="emissive:#ffffff; emissiveIntensity:2"
+                position="0 10 -2.5"
+                scale="0.05 0.05 0.05"
+                rotation="0 90 0">
+        <a-light type="spot"
+                 color="#fffdd0"
+                 intensity="2"
+                 angle="60"
+                 penumbra="0.5"
+                 distance="25"
+                 decay="2"
+                 position="0 10 -2.5"
+                 rotation="-90 0 0"></a-light>
+      </a-entity>
+
+      <a-light type="ambient"
+               color="#ffffff"
+               intensity="0.25"></a-light>
+
+      <a-entity gltf-model="url(/free_empty_room.glb)" position="0 0 -4"></a-entity>
       <a-entity position="0 0 -2.5" rotation="0 180 0" scale="0.01 0.01 0.01">
         <a-entity gltf-model="url(/elsie_stackable_dining_chair_white.glb)" scale="2 2 2"></a-entity>
       </a-entity>
       <a-entity gltf-model="url(/long_table_and_chairs_low_poly.glb)" position="0 0 -4" rotation="0 180 0" scale="2 2 2"></a-entity>
       <a-plane position="-1 2.4 -4" rotation="0 0 0" width="1.2" height="2" color="#cccccc"></a-plane>
       <a-box 
-      position="0.7 1.5 -4.9" 
-      color="#FF0000" 
-      scale="0.9 0.9 0.9">
-    </a-box>
-          <a-plane 
-      position="0 0 -4" 
-      rotation="-90 0 0" 
-      width="4" 
-      height="4" 
-      scale="2 2 1" 
-      color="#7BC8A4">
-    </a-plane>
-          <a-sky color="#ECECEC"></a-sky>
+              position="0.7 1.5 -4.9" 
+              color="#FF0000" 
+              scale="0.9 0.9 0.9">
+      </a-box>
+      <a-plane 
+               position="0 0 -4" 
+               rotation="-90 0 0" 
+               width="4" 
+               height="4" 
+               scale="2 2 1" 
+               color="#7BC8A4">
+      </a-plane>
+      <a-sky color="#ECECEC"></a-sky>
     </a-scene>
   </body>
   </html>
