--- a/index.html
+++ b/index.html
@@ -173,7 +173,13 @@
                  position="0 10 -2.5"
                  rotation="-90 0 0"></a-light>
       </a-entity>
-
+      <a-entity 
+      gltf-model="url(/window_blinds_low_poly_3d_model.glb)"
+      position="0 5 -6"
+      scale="2 2 2"
+      rotation="0 0 0">
+    </a-entity>
+    
       <a-light type="ambient"
                color="#ffffff"
                intensity="0.25"></a-light>
@@ -285,6 +291,7 @@
         align="left"
         color="#565656"
         scale="2 2 2"
+        visible="false"        
         look-at="#camera">
       </a-text>
       <a-box 
