--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
         toast.setAttribute('id', 'toast-notification');
         toast.setAttribute('value', `+ ${itemName}`);
         // Camera-local coordinates for bottom-left corner
-        toast.setAttribute('position', '-0.8 -0.5 -1');
+        toast.setAttribute('position', '-1.6 -0.7 -1');
         toast.setAttribute('align', 'left');
-        toast.setAttribute('color', '#565656');
-        toast.setAttribute('scale', '1.5 1.5 1.5');
+        toast.setAttribute('color', '#4dcc4d');
+        toast.setAttribute('scale', '0.3 0.3 0.3');
         toast.setAttribute('opacity', '0');
         
         // Attach to camera (not scene) - this makes it behave like a HUD
