--- a/index.html
+++ b/index.html
@@ -322,6 +322,26 @@
           material="transparent: true; alphaTest: 0.1; shader: flat; side: double"
           fix-png-transparency>
         </a-image>
+        <a-image 
+          src="/MENU-02.png"
+          position="-4.8 -1 2.3"
+          scale="1.6 1.6 1.6"
+          rotation="0 90 0"
+          width="8"
+          height="5.18"
+          material="transparent: true; alphaTest: 0.1; shader: flat; side: double"
+          fix-png-transparency>
+        </a-image>
+        <a-image 
+          src="/MENU-03.png"
+          position="4.8 -1.5 7.9"
+          scale="1.6 1.6 1.6"
+          rotation="0 270 0"
+          width="8"
+          height="5.18"
+          material="transparent: true; alphaTest: 0.1; shader: flat; side: double"
+          fix-png-transparency>
+        </a-image>
 
         <!-- Clickable Menu Items -->
         <!-- Menu is 8 units wide, 5.18 units tall -->
