--- a/index.html
+++ b/index.html
@@ -385,6 +385,16 @@
           material="transparent: true; alphaTest: 0.1; shader: flat; side: double"
           fix-png-transparency>
         </a-image>
+        <a-image 
+          src="/facial-features.png"
+          position="4.9 -1.3 5.4"
+          scale="0.7 0.7 0.7"
+          rotation="0 270 0"
+          width="8"
+          height="5.18"
+          material="transparent: true; alphaTest: 0.1; shader: flat; side: double"
+          fix-png-transparency>
+        </a-image>
 
         <!-- Clickable Menu Items -->
         <!-- Menu is 8 units wide, 5.18 units tall -->
