--- a/index.html
+++ b/index.html
@@ -475,6 +475,15 @@
       #insufficient-popup.show {
         opacity: 1;
       }
+      .a-enter-vr, 
+      .a-enter-ar, 
+      .a-enter-fullscreen {
+        bottom: auto !important;
+        right: auto !important;
+        top: 50px !important;
+        left: -1360px !important;
+        z-index: 99999 !important;
+      }
     </style>
   </head>
   <body>
