--- a/index.html
+++ b/index.html
@@ -892,19 +892,14 @@
         opacity: 0.55;
         pointer-events: none;
       }
-      #summary-screen::after {
-        content: "";
-        position: absolute;
-        inset: 16px;
-        border: 1px solid rgba(0,0,0,0.6);
-        opacity: 0.7;
-        pointer-events: none;
-      }
       #summary-document {
         position: relative;
         z-index: 1;
         max-width: 820px;
         margin: 0 auto;
+        border: 1px solid rgba(0,0,0,0.6);
+        padding: 22px 24px 26px 24px;
+        box-sizing: border-box;
       }
       #summary-header {
         display: flex;
