--- a/index.html
+++ b/index.html
@@ -365,15 +365,27 @@
 
       // Export summary screen as PDF
       async function exportSummaryAsPDF() {
-        const summaryDocument = document.getElementById('summary-document');
-        if (!summaryDocument) return;
+        const summaryScreen = document.getElementById('summary-screen');
+        if (!summaryScreen) return;
 
-        // Use html2canvas to capture the summary area
-        const canvas = await html2canvas(summaryDocument, {
+        const originalHeight = summaryScreen.style.height;
+        const originalOverflow = summaryScreen.style.overflow;
+        const originalScrollTop = summaryScreen.scrollTop;
+
+        summaryScreen.style.height = `${summaryScreen.scrollHeight}px`;
+        summaryScreen.style.overflow = 'visible';
+        summaryScreen.scrollTop = 0;
+
+        // Use html2canvas to capture the full summary page (with grid/background)
+        const canvas = await html2canvas(summaryScreen, {
           scale: 2,
           useCORS: true,
-          backgroundColor: null
+          backgroundColor: '#dbe6dc'
         });
+
+        summaryScreen.style.height = originalHeight;
+        summaryScreen.style.overflow = originalOverflow;
+        summaryScreen.scrollTop = originalScrollTop;
         const imgData = canvas.toDataURL('image/png');
 
         const { jsPDF } = window.jspdf;
