--- a/index.html
+++ b/index.html
@@ -425,9 +425,9 @@
           ]
         },
         'Brow Lift': { src: '/eyebrows.glb', position: '0 0.27 0.24', scale: '0.2 0.2 0.2' },
-        'Nose Job': { src: '/nose__blender_sculpt.glb', position: '0 0.12 0.28', scale: '0.03 0.03 0.03a' },
+        'Nose Job': { src: '/nose__blender_sculpt.glb', position: '0 0.12 0.28', scale: '0.03 0.03 0.03' },
         'Lip Shape': { src: '/speed_sculpt_lips.glb', position: '0 0.06 0.28', scale: '0.044 0.044 0.044' },
-        'Smile Brightening': { src: '/teeth.glb', position: '0 0.03 0.29', scale: '0.22 0.22 0.22' }
+        'Smile Brightening': { src: '/teeth.glb', position: '0 0.07 0.29', scale: '0.05 0.05 0.05' }
       };
 
       function showFacialFeature(itemName) {
